--- a/index.html
+++ b/index.html
@@ -11,49 +11,56 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body style="margin: 0;">
-   <div class="header">
-       <div class="top-header">
-           <div class="links">
-           <a class="logo" href="./index.html">Header logo</a>
-       <ul>
-           <li><a href="./pages/contact.html">Contact</a></li>
-           <li><a href="./pages/projects.html">Projects</a></li>
-           <li><a href="./pages/about.html">About</a></li>
-       </ul>
-           </div>
-       </div>
-    <div class="lower-header">
-        <div class="section-left">
-        <div class="head">This Website is Awesome</div>
-        <div class="text-under">This website has some subtext that goes here under the main title. It's smaller and the color is lower contrast</div>
-        <div class="button"><button><a href="./pages/sign-up.html">Sign up!</a></button></div>
+    <div class="header">
+        <div class="row">
+            <div class="box1">
+                <a class="logo" href="./index.html">Header logo</a>
+            </div>
+            <div class="box1">
+                <div class="links">
+                    <ul>
+                        <li><a href="./pages/contact.html">Contact</a></li>
+                        <li><a href="./pages/projects.html">Projects</a></li>
+                        <li><a href="./pages/about.html">About</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="image">
-    <div class="image-content">this is a placeholder for an image</div>
+        <div class="row">
+            <div class="box1">
+                <div class="head">This Website is Awesome</div>
+                <div class="text-under">This website has some subtext that goes here under the main title. It's smaller and the color is lower contrast</div>
+                <div class="button"><button><a href="./pages/sign-up.html">Sign up!</a></button></div>
+            </div>
+            <div class="box1">
+                <div class="image">this is a placeholder for an image</div>
+            </div>
         </div>
     </div>
     </div>
     <div class="images">
-    <div class="body-header">Some random information</div>
-    <div class="boxes">
-        <div class="container">
-            <div class="box"></div>
-                <div class="text">This is some subject text under an illustration or image</div></div>
-        <div class="container">
-            <div class="box"></div>
-                <div class="text">This is some subject text under an illustration or image</div></div>
-        <div class="container">
-            <div class="box"></div>
-                <div class="text">This is some subject text under an illustration or image</div></div>
-        <div class="container">
-            <div class="box"></div>
-                <div class="text">This is some subject text under an illustration or image</div></div>
-    </div>
+        <div class="body-header">Some random information</div>
+        <div class="boxes">
+            <div class="container">
+                <div class="box"></div>
+                    <div class="text">This is some subject text under an illustration or image</div></div>
+            <div class="container">
+                <div class="box"></div>
+                    <div class="text">This is some subject text under an illustration or image</div></div>
+            <div class="container">
+                <div class="box"></div>
+                    <div class="text">This is some subject text under an illustration or image</div></div>
+            <div class="container">
+                <div class="box"></div>
+                    <div class="text">This is some subject text under an illustration or image</div></div>
+                </div>
+            </div>
         </div>
-    </div>
     <div class="inspiring-quote">
-        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
-        <div class="author">-Thor, God of Thunder</div>
+            <div class="box">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            <div class="author">-Thor, God of Thunder</div>
+        </div>
     </div>
     <div class="sign-up">
         <div class="left-text">
