--- a/index.html
+++ b/index.html
@@ -4,71 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Awesome Website</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Document</title>
 </head>
-<body style="margin: 0;">
-    <div class="header">
-        <div class="row">
-            <div class="box1">
-                <a class="logo" href="./index.html">Header logo</a>
-            </div>
-            <div class="box1">
-                <div class="links">
-                    <ul>
-                        <li><a href="./pages/contact.html">Contact</a></li>
-                        <li><a href="./pages/projects.html">Projects</a></li>
-                        <li><a href="./pages/about.html">About</a></li>
-                    </ul>
-                </div>
-            </div>
+<body>
+    <header>
+        <nav>
+        <div class="header-box"><p class="logo">Header Logo</p>
         </div>
-        <div class="row">
-            <div class="box1">
-                <div class="head">This Website is Awesome</div>
-                <div class="text-under">This website has some subtext that goes here under the main title. It's smaller and the color is lower contrast</div>
-                <div class="button"><button><a href="./pages/sign-up.html">Sign up!</a></button></div>
-            </div>
-            <div class="box1">
-                <div class="image">this is a placeholder for an image</div>
-            </div>
         </div>
-    </div>
-    </div>
-    <div class="images">
-        <div class="body-header">Some random information</div>
-        <div class="boxes">
-            <div class="container">
-                <div class="box"></div>
-                    <div class="text">This is some subject text under an illustration or image</div></div>
-            <div class="container">
-                <div class="box"></div>
-                    <div class="text">This is some subject text under an illustration or image</div></div>
-            <div class="container">
-                <div class="box"></div>
-                    <div class="text">This is some subject text under an illustration or image</div></div>
-            <div class="container">
-                <div class="box"></div>
-                    <div class="text">This is some subject text under an illustration or image</div></div>
-                </div>
-            </div>
+        <div class="header-box" id="links">
+            <a href="">header link one</a>
+            <a href="">header link two</a>
+            <a href="">header link three</a>
         </div>
-    <div class="inspiring-quote">
-            <div class="box">
-            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
-            <div class="author">-Thor, God of Thunder</div>
+        </nav>
+        <div class="lower">
+        <div class="header-box" id="header-text">
+            <p class="header-title">This website is awesome</p>
+            <p class="header-body">This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast</p>
+            <button id="header-button">Sign Up</button>
+        </div>
+        <div class="header-box" id="header-image">
+            <p>this is a placeholder for an image</p>
+        </div>
+        </div>
+    </header>
+    <div class="body-images">
+        <div class="images-title">Some random information</div>
+        <div class="images">
+            <div class="image-box"><div class="image"></div><p>this is some subtext under an illustration or image</p></div><div class="image-box"><div class="image"></div><p>this is some subtext under an illustration or image</p></div><div class="image-box"><div class="image"></div><p>this is some subtext under an illustration or image</p></div><div class="image-box"><div class="image"></div><p>this is some subtext under an illustration or image</p></div>
         </div>
     </div>
-    <div class="sign-up">
-        <div class="left-text">
-        <div class="action">Call to action! It's time!</div>
-        <div class="call-for-action">Sign up for our podcast by clicking that button right over there!</div></div>
-        <div class="button"><button><a href="./pages/sign-up.html">Sign-up</a></button></div>
-        </div>
 
+    <div class="quote">
+        <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. </p>
+    <p class="author">-Thor, God of Thunder</p>
+    </div>
+
+    <div class="sign-up">
+        <div class="sign-up-text">
+            <p class="sign-up-title">Call to action! It's time!</p>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
+    </div>
+
+    <footer>
+        <p>Copyright @ The Odin Project 2021</p>
+    </footer>
+    
     
 </body>
 </html>
